// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Props - Size Should render a 'p' tag with a 'align' prop 1`] = `
.c0 {
  font-family: "Geist",sans-serif;
  color: var(--text-color,#000);
  text-align: center;
  font-weight: var(--text-weight,normal);
  font-size: var(--text-size,16px);
  --text-size: 16px;
}

<p
  align="center"
  class="c0"
  data-testid="core-text-variant-p"
>
  Hello
</p>
`;

exports[`Text Props - Size Should render a 'p' tag with a 'color' prop 1`] = `
.c0 {
  font-family: "Geist",sans-serif;
  color: var(--text-color,red);
  text-align: left;
  font-weight: var(--text-weight,normal);
  font-size: var(--text-size,16px);
  --text-size: 16px;
}

<p
  class="c0"
  color="red"
  data-testid="core-text-variant-p"
>
  Hello
</p>
`;

exports[`Text Props - Size Should render a 'p' tag with a 'size' prop 1`] = `
.c0 {
  font-family: "Geist",sans-serif;
  color: var(--text-color,#000);
  text-align: left;
  font-weight: var(--text-weight,normal);
  font-size: var(--text-size,16px);
  --text-size: 16px;
}

<p
  class="c0"
  data-testid="core-text-variant-p"
>
  Hello
</p>
`;

exports[`Text Props - Size Should render a 'p' tag with a 'weight' prop 1`] = `
.c0 {
  font-family: "Geist",sans-serif;
  color: var(--text-color,#000);
  text-align: left;
  font-weight: var(--text-weight,semibold);
  font-size: var(--text-size,16px);
  --text-size: 16px;
}

<p
  class="c0"
  data-testid="core-text-variant-p"
  weight="semibold"
>
  Hello
</p>
`;
